[tool.poetry]
name = "background-task-orchestrator"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveenms01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
psutil = "^5.9.8"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.7.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
